Version 6.8.4 - not yet released
* data files
  - accept "Military Aerodrome Traffic Zone" (MATZ) airspaces in
    OpenAir files (#3732)
* Kobo
  - eliminate screen flashing on Kobo Glo HD, Kobo Touch 2.0

Version 6.8.3 - 2016/03/09
* map
  - fix distorted terrain when zoomed out
  - fix missing airspaces in cross section (#3537)
* calculations
  - update SIS-AT to 2016 scoring rules
  - fix landing time display (#3690)
  - fix AAT range display
* data files
  - use correct "comment" field for OziExplorer files
  - relax file format detection for OziExplorer files
  - fix bogus arrival heights on watched waypoints when GPS unavailable
  - fix crash in airspace parser
  - fix crash in XML parser
  - save user.cup after edit (#3701)
* devices
  - GTAltimeter: remove unmaintained driver (#3661)
* Kobo
  - support Kobo Glo HD, Kobo Touch 2.0
* fix crash in SkyLines tracking

Version 6.8.2 - 2015/09/19
* Rubik R-26S polar
* user interface
  - save settings after copy&pasting an InfoBox set (#3649)
* map
  - fix crash in the topography renderer
* calculations
  - fix task progress display after finish achieved (#3657)
* devices
  - fix wrong baud rate after task declaration (#3654)
* Android
  - support the "escape" key (#3647)
  - fix all RS232 permissions on Android (#3648)
* Kobo
  - fix wrong IP address display (#3650)
* Raspberry Pi / Cubieboard
  - support digit and letter keys (#3611)

Version 6.8.1 - 2015/08/27
* fix freeze bug when starting without GPS fix
* fix crash with empty xcsoar-checklist.txt file
* devices
  - fix TCP port on Windows (#3428)
* Windows
  - fix the airspace file parser (#3633)
* Kobo
  - fix overlapping text (#3634)
* Android
  - fix USB-RS232-OTG permissions on Android

Version 6.8 - 2015/08/18
* data files
  - optimise the topography loader
  - faster RASP map change
  - show all RASP maps
  - fix comments in TNP files
  - ignore trailing whitespace in airspace files (#3546)
  - store user-edited waypoints and markers in "user.cup"